# devos

./: .dir-locals.el  .editorconfig  .gitignore  .ignore  .sops.yaml  README.org  changelog.org  flake.nix  pyproject.toml
checks/: default.nix  documentation.org.nix
checks/lib/: default.nix
doc/: documentation.org.nix
doc/TODOS/: FAQ.org  android.org  attention.org  cachix.org  console.org  debugging.org  deployment.org  development.org  devos.org  documentation.org  dotLocal.org  firefox.org  flakes.org  gpg.org  greetd.org  hosts.org  keyboardLayout.org  nix.org  packages.org  ranger.org  ssh.org  sway.org  testing.org  tools.org  variables.org  vbox.org  virtualisation.org
doc/WORKFLOWS/: WORKFLOW-ISO.org  WORKFLOW-NEW-HOST.org  WORKFLOW-UPDATE.org
doc/cookbook/: README.org
doc/docLocal/: config.toml
doc/server/: variables.org
home/: default.nix  documentation.org.nix
home/suites/: default.nix
hosts/: documentation.org.nix
hosts/NixOS/: default.nix  home.nix  system.nix
hosts/bootstrap/: default.nix
hosts/isoBase/: default.nix  home.nix  system.nix
hosts/mac/: default.nix
hosts/nuc/: system.nix
lib/: default.nix  documentation.org.nix
nixos/: default.nix  documentation.org.nix
overlays/: documentation.org.nix
pkgs/: default.nix  documentation.org.nix  sources.toml
secrets/: documentation.org.nix
shell/: README.org  default.nix  devos.nix  documentation.org.nix
tests/: README.org  aux.py  default.nix  documentation.org.nix  interactiveTestConsolePreparation.py  testing.org  tests.bash
users/: documentation.org.nix
(+1004 files in other folders)
